<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">FieldBook</string>
    <string name="action_settings">Settings</string>
   
    <string name="button_submit_login">Login</string>
    <string name="edit_username"></string>
    <string name="label_username"> Username </string>
    <string name="label_password"> Password </string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="title_activity_display_message">Login Details</string>
    <string name="title_activity_signup">SignupActivity</string>
    <string name="button_submit_signup_data">Dont have an account yet? Tap here </string>
    <string name="label_useridno"> User ID </string>
    <string name="edit_useridno"></string>
    <string name="label_firstname"> First Name </string>
    <string name="edit_firstname"></string>
    <string name="label_middlename"> Middle Name </string>
    <string name="edit_middlename"></string>
    <string name="label_lastname"> Last Name </string>
    <string name="edit_lastname"></string>
    <string name="label_orgunitid"> OrgUnit ID </string>
    <string name="edit_orgunitid"></string>
    <string name="button_submit_signup">Submit</string>
    <string name="title_activity_signup_display">SignupDisplayActivity</string>
    

</resources>
