<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.fieldbook.SignupActivity$PlaceholderFragment"
    android:orientation="vertical" >
     
     <TextView
        android:id="@+id/label_useridno"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
    	android:gravity="left"
        android:text="@string/label_useridno" />
     
     <EditText 
        android:id="@+id/edit_useridno"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:textSize="15sp"
        android:inputType="text" />
     
      <TextView
        android:id="@+id/label_username"
        android:layout_width="wrap_content"
        android:layout_height="15dp"
        android:text="@string/label_username" />
     
     <EditText 
        android:id="@+id/edit_username"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:textSize="15sp"
        android:inputType="text" />

     <TextView
         android:id="@+id/label_password"
         android:layout_width="wrap_content"
         android:layout_height="15dp"
         android:text="@string/label_password" />
     
    <EditText 
        android:id="@+id/edit_password"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:textSize="15sp"
        android:inputType="textPassword" />
    
    <TextView
        android:id="@+id/label_firstname"
        android:layout_width="wrap_content"
        android:layout_height="15dp"
        android:text="@string/label_firstname" />
     
    <EditText 
        android:id="@+id/edit_firstname"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:textSize="15sp"
        android:inputType="text" />

    <TextView
         android:id="@+id/label_middlename"
         android:layout_width="wrap_content"
         android:layout_height="15dp"
         android:text="@string/label_middlename" />
     
    <EditText 
        android:id="@+id/edit_middlename"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:textSize="15sp"
        android:inputType="text" />
    
    <TextView
         android:id="@+id/label_lastname"
         android:layout_width="wrap_content"
         android:layout_height="15dp"
         android:text="@string/label_lastname" />
     
    <EditText 
        android:id="@+id/edit_lastname"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:textSize="15sp"
        android:inputType="text" />
    
    <TextView
         android:id="@+id/label_orunitid"
         android:layout_width="wrap_content"
         android:layout_height="15dp"
         android:text="@string/label_orgunitid" />
     
    <EditText 
        android:id="@+id/edit_orgunitid"
        android:layout_width="match_parent"
        android:layout_height="27dp"
        android:inputType="text" />
    
    <Button
        android:id="@+id/submit_signup"
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:background="@color/light_green"
        android:gravity="center"
        android:onClick="submitSignData"
        android:text="@string/button_submit_signup"
        android:textSize="15sp" />
    
</LinearLayout>
