<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/light_green"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.fieldbook.MainActivity$PlaceholderFragment" >

    <ImageView
        android:id="@+id/fieldbook"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@null"
        android:src="@drawable/fieldbook" />

    <EditText
        android:id="@+id/edit_username"
        android:layout_width="match_parent"
        android:layout_height="25dp"
        android:background="#ffffff"
        android:ems="10"
        android:hint="@string/label_username"
        android:inputType="text" >

        <requestFocus />
    </EditText>

    <EditText
        android:id="@+id/edit_password"
        android:layout_width="match_parent"
        android:layout_height="25dp"
        android:layout_marginTop="12dp"
        android:background="#ffffff"
        android:ems="10"
        android:hint="@string/label_password"
        android:inputType="textPassword" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_marginTop="12dp"
        android:background="@color/dark_green"
        android:onClick="submitLogin"
        android:text="@string/button_submit_login"
        android:textSize="13sp" />

    <Button
        android:id="@+id/link_to_signup"
        android:layout_width="match_parent"
        android:layout_height="32dp"
        android:layout_marginLeft="43dp"
        android:background="@color/light_green"
        android:gravity="bottom|left"
        android:onClick="submitSignup"
        android:text="@string/button_submit_signup_data"
        android:textSize="12sp" />

</LinearLayout>